<resources>
    <string name="app_name">SpotMyAcne App</string>
    <string name="spot_my_acne">Spot My Acne</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="register">Register</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome!</string>
    <string name="map">Map</string>
    <string name="calendar">Calendar</string>
    <string name="calendarBar">Calendar</string>
    <string name="homeBar">Home</string>
    <string name="mapBar">Map</string>
    <string name="profileBar">Profile</string>
    <string name="my_calendar">My Calendar</string>
    <string name="my_profile">My Profile</string>
    <string name="mapView">mapView</string>
    <string name="mapview">mapview</string>
    <string name="find_you_doc">Find you doc</string>
    <string name="button">Button</string>
    <string name="backMap">TODO</string>
    <string name="backRoutine">backRoutine</string>
    <string name="my_routine">My Routine</string>
    <string name="night">NIGHT</string>
    <string name="morning">MORNING</string>
    <string name="photo_of_the_day">PHOTO OF THE DAY</string>
    <string name="produs1">Produs1</string>
    <string name="produs11">Produs1</string>
    <string name="produs3">Produs3</string>
    <string name="produs2">Produs2</string>
    <string name="produs22">Produs2</string>
    <string name="produs33">Produs3</string>
    <string name="email">E-mail</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_out">Log Out</string>
</resources>